cp: 	PR c++/13241 	C++ ABI change. Mangling of symbols in expressions. 	* mangle.c (write_mangled_name): Add top_level flag. Rework for 	nested and unnested mangling. Deal with abi version 1 and version 	2 differences. 	(write_expression): Adjust write_mangled_name call. 	(mangle_decl_string): Use write_mangled_name for all non-type decls. testsuite: 	PR c++/13241 	* g++.dg/abi/mangle18-1.C: New test. 	* g++.dg/abi/mangle18-2.C: New test.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@74628 138bc75d-0d04-0410-961f-82ee72b054a4